--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Hi! I'm Nina Lin – a visual journalist specializing in data visualizations and multimedia production. Let's talk.">
+    <meta name="description" content="Hi! I'm Nina Lin – a visual journalist specializing in data visualizations and multimedia production. No, not the TikTok star.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nina Lin | Data & Storytelling</title>
 
