--- a/about.html
+++ b/about.html
@@ -44,13 +44,6 @@
       </div>
 
       <h2 class="intro">Hi – I'm Nina.<br><br>I am a
-        <!-- <select class="select" id="select">
-          <option>storyteller</option>
-          <option>data designer</option>
-          <option>journalist</option>
-          <option>photographer</option>
-          <option>videographer</option>
-        </select> -->
           <span class="filter">reporter</span>
           <span class="filter">photographer</span>
           <span class="filter">video editor</span>
@@ -62,7 +55,7 @@
 
     <div class="content">
       <img class="aboutpic" src="images/nlin.png" alt="A photo of Nina with two Nikon dSLRs, a 24-70 millimeter lens, and a 70-300 millimeter telephoto lens. These days she's lazy and only uses her iPhone."/>
-      <div class="imgCaption">Just me with my two loves, the 24-70 and the 70-300mm.</div>
+      <div class="imgCaption">No, not the TikTok star.</div>
 
       <p></p>
       <p></p>
