--- a/404.html
+++ b/404.html
@@ -48,7 +48,7 @@
       <h3 class="screamer">404<h3>
       <div class="content">
 
-        <p>All good things come to an end...just like this page.<p>
+        <p>All good things must come to an end...just like this page.<p>
 
         <p> <a title="Home" href="/index.html">Home</a></p>
       </div>
