--- a/404.html
+++ b/404.html
@@ -43,6 +43,66 @@
         <div class="menuOption iconBorder">
           <a title="Home" href="#">
             <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="description" content="Hi! I'm Nina Lin – a visual journalist specializing in data visualizations and multimedia production. Let's talk.">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Nina Lin | 404</title>
+
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300,100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,300,100' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
+    <link href="css/nl.css" rel="stylesheet">
+  </head>
+
+  <body>
+
+    <div id="main">
+
+      <div class="menu">
+        <div class="menuOption">
+          <a title="Instagram" href="https://www.instagram.com/nlinphoto/" target="_blank">
+            <img class="menuIcon" alt="An icon that leads to Instagram." src="images/icons/instagram.png" /></a></div>
+        <div class="menuOption">
+          <a title="Twitter" href="https://twitter.com/nlinphoto" target="_blank">
+            <img class="menuIcon" alt="An icon that leads to Twitter." src="images/icons/twitter.png" /></a></div>
+        <div class="menuOption">
+          <a title="LinkedIn" href="https://www.linkedin.com/in/ninalin/" target="_blank">
+            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="images/icons/linkedin.png" /></a></div>
+        <div class="menuOption">
+          <a title="GitHub" href="https://github.com/nina-lin" target="_blank">
+            <img class="menuIcon" alt="An icon that leads to GitHub." src="images/icons/github.png" /></a></div>
+        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="images/icons/mail.png" /></a></div> -->
+
+        <div class="menuLine"></div>
+
+        <div class="menuOption">
+          <a title="About Me" href="/about.html">
+            <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
+
+        <div class="menuOption">
+          <a title="Home" href="/index.html">
+            <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
+      </div>
+
+      <h3 class="screamer">404<h3>
+      <div class="content">
+
+        <p>All good things must come to an end...just like this page.<p>
+
+        <p> <a title="Home" href="/index.html">Home</a></p>
+      </div>
+
+
+    <div class="footer"></div>
+
+  </body>
+</html>
+
       </div>
 
       <h3 class="screamer">404<h3>
