--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
             <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
 
         <div class="menuOption">
-          <a title="Home" href="/index.html">
+          <a title="Home" href="/index">
             <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
       </div>
 
@@ -59,12 +59,8 @@
 
       <p></p>
       <p></p>
-<!--       <p>I spent the majority of my career bouncing from discipline to discipline, first writing for the campus paper before quickly pivoting to sports and breaking news photography.</p>
-      <p>Months spent covering the university football field and basketball courts with a camera led to the photo desk with my hometown's "Picture Newspaper," the New York <em>Daily News</em>.</p>
-      <p>Working for NBC as a producer was supposed to be a continuation of that love, but the job quickly led to a smorgasbord of other visual experiences and learning. Photo essays and video production became data visualizations and newsroom trackers.</p>
-      <p>I now tell stories with not just words and a camera, but now also with Javascript and d3.</p> -->
-      <p>Currently I am a journalist by day and a masters student at St. John's University studying data science by night. In my spare time I might be working on photo projects, practicing Python, or driving my husband nuts with my terrible attempts at the violin.</p>
-      <p>I'm also <a href="https://twitter.com/nlinphoto" target="_blank">addicted to Twitter</a>. Check out <a title="Home" href="/index.html">some of my projects</a>, or <a href="mailto:nina@ninalin.com">say hi!</a></p>
+      <p>Currently I am a journalist with NBC Owned Television Stations by day, and a master's student studying data science at St. John's University by night. In my spare time I might be working on photo projects, practicing Python, or driving my husband nuts with my terrible attempts at the violin.</p>
+      <p>I'm also <a href="https://twitter.com/nlinphoto" target="_blank">addicted to Twitter</a>. Check out <a title="Home" href="/index">some of my projects</a>, or <a href="mailto:nina@ninalin.com">say hi!</a></p>
       <p></p>
       <p></p>
       <p></p>
