--- a/404.html
+++ b/404.html
@@ -49,7 +49,7 @@
 
         <p>All good things must come to an end...just like this page.<p>
 
-        <p> <a title="Home" href="/index.html">Home</a></p>
+        <p> <a title="Home" href="/index">Home</a></p>
       </div>
 
 
