--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <div class="menuLine"></div>
 
         <div class="menuOption">
-          <a title="About Me" href="/about.html">
+          <a title="About Me" href="/about">
             <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
 
         <div class="menuOption iconBorder">
@@ -47,7 +47,7 @@
             <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
       </div>
 
-      <h2 class="intro">Hi – I'm <a title="About Me" href="/about.html">Nina</a>.<br><br>I am a
+      <h2 class="intro">Hi – I'm <a title="About Me" href="/about">Nina</a>.<br><br>I am a
         <!-- <select class="select" id="select">
           <option>storyteller</option>
           <option>data designer</option>
