--- a/index.html
+++ b/index.html
@@ -3,8 +3,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="description" content="Hi! I'm Nina Lin – a visual journalist specializing in data visualizations and multimedia production. No, not the TikTok star.">
+    <meta name="description" content="Hi! I'm Nina – a visual journalist specializing in data visualizations and multimedia production. No, not the TikTok star.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta property="og:image" content="images/thumb-1.png">
+    <meta property="og:image:type" content="image/png">
+    <meta property="og:image:width" content="800">
+    <meta property="og:image:height" content="450">
     <title>Nina Lin | Data & Storytelling</title>
 
     <link rel="canonical" href="https://www.ninalin.com/index.html" />
