--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
 
     <div class="content">
       <img class="aboutpic" src="images/nlin.png" alt="A photo of Nina with two Nikon dSLRs, a 24-70 millimeter lens, and a 70-300 millimeter telephoto lens. These days she's lazy and only uses her iPhone."/>
-      <div class="imgCaption">No, not the TikTok star.</div>
+      <div class="imgCaption">No, not the TikTok star. Also did not kill Bunny at the Arconia.</div>
 
       <p></p>
       <p></p>
