--- a/about.html
+++ b/about.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -6,11 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nina Lin | About</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300,100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
-    <link href="css/nl.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body>
@@ -39,7 +34,7 @@
             <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
 
         <div class="menuOption">
-          <a title="Home" href="/index">
+          <a title="Home" href="./">
             <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
       </div>
 
@@ -59,8 +54,8 @@
 
       <p></p>
       <p></p>
-      <p>Currently I am a journalist with NBC Owned Television Stations by day, and a master's student studying data science at St. John's University by night. In my spare time I might be working on photo projects, practicing Python, or driving my husband nuts with my terrible attempts at the violin.</p>
-      <p>I'm also <a href="https://twitter.com/nlinphoto" target="_blank">addicted to Twitter</a>. Check out <a title="Home" href="/index">some of my projects</a>, or <a href="mailto:nina@ninalin.com">say hi!</a></p>
+      <p>Currently I am a journalist with NBC Owned Television Stations by day, and studying data science at St. John's University by night. In my spare time I might be working on photo projects, practicing Python, or driving my husband nuts with the violin.</p>
+      <p>I'm also <a target="_blank" href="https://twitter.com/nlinphoto">addicted to Twitter</a>, although I'm slowly migrating to <a href="https://post.news/@/ninalin" target="_blank">Post</a> and <a target="_blank" href="https://journa.host/@ninalin">Mastodon</a>. Check out <a title="Home" href="/index">some of my projects</a>, or <a href="mailto:nina@ninalin.com">say hi!</a></p>
       <p></p>
       <p></p>
       <p></p>
