--- a/index.html
+++ b/index.html
@@ -21,12 +21,7 @@
 
     <link rel="canonical" href="https://www.ninalin.com/index.html" />
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,500,300,100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Roboto+Mono:400,500,300,100' rel='stylesheet' type='text/css'>
-    <link href='https://fonts.googleapis.com/css?family=Arimo:400,700' rel='stylesheet' type='text/css'>
-    <link href="css/nl.css" rel="stylesheet">
+    <link href="css/main.css" rel="stylesheet">
   </head>
 
   <body>
@@ -51,7 +46,7 @@
         <div class="menuLine"></div>
 
         <div class="menuOption">
-          <a title="About Me" href="/about">
+          <a title="About Me" href="/about.html">
             <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
 
         <div class="menuOption iconBorder">
