--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Hi! I'm Nina – a visual journalist specializing in data visualizations and multimedia production. No, not the TikTok star.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:image" content="favicons/thumb-1.png">
+    <meta property="og:image" content="images/thumb-1.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="450">
@@ -33,27 +33,27 @@
       <div class="menu">
         <div class="menuOption">
           <a title="Instagram" href="https://www.instagram.com/nlinphoto/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Instagram." src="favicons/instagram.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to Instagram." src="favicon/instagram.png" /></a></div>
         <div class="menuOption">
           <a title="Twitter" href="https://twitter.com/nlinphoto" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Twitter." src="favicons/twitter.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to Twitter." src="favicon/twitter.png" /></a></div>
         <div class="menuOption">
           <a title="LinkedIn" href="https://www.linkedin.com/in/ninalin/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="favicons/linkedin.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="favicon/linkedin.png" /></a></div>
         <div class="menuOption">
           <a title="GitHub" href="https://github.com/nina-lin" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to GitHub." src="favicons/github.png" /></a></div>
-        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="favicons/mail.png" /></a></div> -->
+            <img class="menuIcon" alt="An icon that leads to GitHub." src="favicon/github.png" /></a></div>
+        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="favicon/mail.png" /></a></div> -->
 
         <div class="menuLine"></div>
 
         <div class="menuOption">
           <a title="About Me" href="pages/about.html">
-            <img class="menuIcon" alt="Know more about me." src="favicons/about.png" /></a></div>
+            <img class="menuIcon" alt="Know more about me." src="favicon/about.png" /></a></div>
 
         <div class="menuOption iconBorder">
           <a title="Home" href="#">
-            <img class="menuIcon" alt="Go back to the main page." src="favicons/home.png" /></a></div>
+            <img class="menuIcon" alt="Go back to the main page." src="favicon/home.png" /></a></div>
       </div>
 
       <h2 class="intro">Hi – I'm <a title="About Me" href="/about">Nina</a>.<br><br>I am a
