--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="menu">
         <div class="menuOption">
-          <a title="Instagram" href="https://www.instagram.com/nlinphoto/" target="_blank">
+          <a title="Instagram" href="https://www.instagram.com/linographs/" target="_blank">
             <img class="menuIcon" alt="An icon that leads to Instagram." src="favicon/instagram.png" /></a></div>
         <div class="menuOption">
           <a title="Twitter" href="https://twitter.com/nlinphoto" target="_blank">
