--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="450">
-
-
     
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
@@ -48,7 +46,7 @@
         <div class="menuLine"></div>
 
         <div class="menuOption">
-          <a title="About Me" href="pages/about.html">
+          <a title="About Me" href="about.html">
             <img class="menuIcon" alt="Know more about me." src="favicon/about.png" /></a></div>
 
         <div class="menuOption iconBorder">
@@ -76,11 +74,6 @@
     <div id="mainGrid"></div>
 
     <div class="footer"></div>
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.5/es6-shim.min.js"></script> -->
     <!-- <script src="js/tether.min.js"></script> -->
     <script src="js/bootstrap.min.js"></script>
 
