--- a/about.html
+++ b/about.html
@@ -15,27 +15,27 @@
       <div class="menu">
         <div class="menuOption">
           <a title="Instagram" href="https://www.instagram.com/linographs/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Instagram." src="images/icons/instagram.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to Instagram." src="favicon/instagram.png" /></a></div>
         <div class="menuOption">
           <a title="Twitter" href="https://twitter.com/nlinphoto" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Twitter." src="images/icons/twitter.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to Twitter." src="favicon/twitter.png" /></a></div>
         <div class="menuOption">
           <a title="LinkedIn" href="https://www.linkedin.com/in/ninalin/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="images/icons/linkedin.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="favicon/linkedin.png" /></a></div>
         <div class="menuOption">
           <a title="GitHub" href="https://github.com/nina-lin" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to GitHub." src="images/icons/github.png" /></a></div>
-        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="images/icons/mail.png" /></a></div> -->
+            <img class="menuIcon" alt="An icon that leads to GitHub." src="favicon/github.png" /></a></div>
+        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="favicon/mail.png" /></a></div> -->
 
         <div class="menuLine"></div>
 
         <div class="menuOption iconBorder">
           <a title="About Me" href="#">
-            <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
+            <img class="menuIcon" alt="Know more about me." src="favicon/about.png" /></a></div>
 
         <div class="menuOption">
           <a title="Home" href="./">
-            <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
+            <img class="menuIcon" alt="Go back to the main page." src="favicon/home.png" /></a></div>
       </div>
 
       <h2 class="intro">Hi – I'm Nina.<br><br>I am a
