--- a/pages/test.html
+++ b/pages/test.html
@@ -1,10 +1,11 @@
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="description" content="Hi! I'm Nina – a visual journalist specializing in data visualizations and multimedia production. No, not the TikTok star.">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta property="og:image" content="favicon/thumb-1.png">
+    <meta property="og:image" content="images/thumb-1.png">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="800">
     <meta property="og:image:height" content="450">
@@ -12,16 +13,22 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png">
-
     <link rel="manifest" href="/favicon/site.webmanifest">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
     
-    <title>Nina Lin | Data & Storytelling</title>
+    <title>NL Testing...</title>
 
-    <link rel="canonical" href="https://www.ninalin.com/" />
+    <link href="css/main.css" rel="stylesheet">
 
-    <link href="css/base.css" rel="stylesheet">
+    <script>
+
+      // document.getElementById('main').style.display = 'none';
+
+      console.log('hi')
+
+    </script>
+
   </head>
 
   <body>
@@ -30,33 +37,31 @@
 
       <div class="menu">
         <div class="menuOption">
-          <a title="Instagram" href="https://www.instagram.com/linographs/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Instagram." src="favicon/instagram.png" /></a></div>
+          <a title="Instagram" href="https://www.instagram.com/nlinphoto/" target="_blank">
+            <img class="menuIcon" alt="An icon that leads to Instagram." src="images/icons/instagram.png" /></a></div>
         <div class="menuOption">
           <a title="Twitter" href="https://twitter.com/nlinphoto" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to Twitter." src="favicon/twitter.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to Twitter." src="images/icons/twitter.png" /></a></div>
         <div class="menuOption">
           <a title="LinkedIn" href="https://www.linkedin.com/in/ninalin/" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="favicon/linkedin.png" /></a></div>
+            <img class="menuIcon" alt="An icon that leads to LinkedIn." src="images/icons/linkedin.png" /></a></div>
         <div class="menuOption">
           <a title="GitHub" href="https://github.com/nina-lin" target="_blank">
-            <img class="menuIcon" alt="An icon that leads to GitHub." src="favicon/github.png" /></a></div>
-        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="favicon/mail.png" /></a></div> -->
+            <img class="menuIcon" alt="An icon that leads to GitHub." src="images/icons/github.png" /></a></div>
+        <!-- <div class="menuOption"><a href="mailto:nina@ninalin.com"><img class="menuIcon" src="images/icons/mail.png" /></a></div> -->
 
         <div class="menuLine"></div>
 
         <div class="menuOption">
-          <a title="About Me" href="pages/about.html">
-            <img class="menuIcon" alt="Know more about me." src="favicon/about.png" /></a></div>
+          <a title="About Me" href="/about.html">
+            <img class="menuIcon" alt="Know more about me." src="images/icons/about.png" /></a></div>
 
         <div class="menuOption iconBorder">
           <a title="Home" href="#">
-            <img class="menuIcon" alt="Go back to the main page." src="favicon/home.png" /></a></div>
+            <img class="menuIcon" alt="Go back to the main page." src="images/icons/home.png" /></a></div>
       </div>
 
-      <h1 class="intro">Hi – I'm <a title="About Me" href="/about">Nina</a>.</h1>
-        
-      <h2 class="intro"> I am a
+      <h2 class="intro">Hi – I'm <a title="About Me" href="/about">Nina</a>.<br><br>I am a
         <!-- <select class="select" id="select">
           <option>storyteller</option>
           <option>data designer</option>
@@ -69,17 +74,19 @@
           <span class="filter">video editor</span>
           <span class="filter">designer</span>
           <span class="filter">data visualist</span>
-          <span class="filter nostrike">visual journalist</span>.
+          <span class="filter nostrike">visual journalist</span>
       </h2>
-
     </div> <!--main-->
 
-    <div id="mainGrid" class="grid"></div>
+    <div id="main">
+
+      Testing...
+    </div>
+
     <div class="footer"></div>
 
-    <!-- <script src="js/bootstrap.min.js"></script> -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.1.0/papaparse.min.js"></script>
-    <script src="js/nl.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/es6-shim/0.35.5/es6-shim.min.js"></script>
+    <script src="js/tether.min.js"></script>
 
   </body>
 </html>
