--- a/pages/about.html
+++ b/pages/about.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Nina Lin | About</title>
-    <link rel="manifest" href="/favicon/site.webmanifest">
+    <!-- <link rel="manifest" href="/favicon/site.webmanifest"> -->
 
     <link href="../css/base.css" rel="stylesheet">
   </head>
